[project]
name = "workshop-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "Julio Torres",email = "julio.torres7@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
